<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_comment_label"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_comment_name"
                android:textSize="15sp"
                />
            <EditText
                android:id="@+id/dialog_comment_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_comment_email"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/dialog_comment_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_comment_txt"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/dialog_comment_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_add_button"
            android:textColor="#fff"
            />


    </LinearLayout>

</LinearLayout>